--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mute"
         tools:targetApi="31">
+        <service
+            android:name=".MuteTileService"
+            android:icon="@drawable/ic_tile"
+            android:label="@string/tile_name"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
