--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mute">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,14 +18,18 @@
         android:theme="@style/Theme.Mute"
         tools:targetApi="31">
         <service
+            android:name=".MuteService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
             android:name=".MuteTileService"
-            android:icon="@drawable/ic_tile"
-            android:label="@string/tile_name"
             android:enabled="true"
             android:exported="true"
+            android:icon="@drawable/ic_tile"
+            android:label="@string/tile_name"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
 
